--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          
+      - name: Install dependencies
+        run: npm ci
+        working-directory: sample-application
 
       - name: Build app
         run: npm run build
