--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -17,6 +17,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm init
+      - run: npm init -y
     
       
