--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Downloading Package
         run: npm init -y
       - name: Build Docker Image
+        uses: docker/setup-buildx-action@v3
         run: docker build -t myapp:latest .
       - name: Push Docker Image
         uses: docker/build-push-action@v5
