--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -19,9 +19,13 @@ jobs:
           node-version: 18
       - name: Downloading Package
         run: npm init -y
-      - name: Build Docker Image
+        
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker Image
         run: docker build -t myapp:latest .
+
       - name: Push Docker Image
         uses: docker/build-push-action@v5
         with:
