--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Build Docker Image
         run: docker build -t myapp:latest ./sample-application
 
+      - name : Logging into docker hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push Docker Image
         uses: docker/build-push-action@v5
         with:
