--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -23,18 +23,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker Image
-        run: docker build -t myapp:latest ./sample-application
-
       - name : Logging into docker hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Build Docker Image
+        run: |
+          docker build -t myapp:latest ./sample-application
+          docker tag myapp:latest ismailsabryibm/myapp:latest
       - name: Push Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: ismailsabryibm/myapp:latest
+        run: docker push ismailsabryibm/myapp:latest 
     
       
