--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -5,6 +5,23 @@ on:
       - main
 
 jobs:
+  setup-minikube:
+   runs-on: ubuntu-latest
+   steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Minikube
+        run: |
+          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          chmod +x minikube
+          sudo mv minikube /usr/local/bin/
+
+      - name: Install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
   build-deploy:
     runs-on: ubuntu-latest
     steps:
