--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -5,12 +5,13 @@ on:
       - main
 
 jobs:
-  setup-minikube:
-   runs-on: ubuntu-latest
-   steps:
+  build-deploy:
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
       - name: Install Minikube
         run: |
           curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
@@ -22,14 +23,10 @@ jobs:
           curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
-  build-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
+      - name: Start Minikube
+        run: |
+          minikube start --driver=docker
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
