--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -54,5 +54,6 @@ jobs:
         run: |
           kubectl apply -f myappdeploy.yaml --validate=false
           kubectl apply -f myappservice.yaml --validate=false
-          kubectl get pods --wait
+          sleep 60 #
+          kubectl get pods 
       
