--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -54,6 +54,8 @@ jobs:
         run: |
           kubectl apply -f myappdeploy.yaml --validate=false
           kubectl apply -f myappservice.yaml --validate=false
+           kubectl scale deployment myapp --replicas=3
           sleep 60 #
           kubectl get pods 
+          minikube service myapp
       
