--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -45,9 +45,8 @@ jobs:
           
       - name: Build Docker Image
         run: |
-         VERSION_TAG=v22.0.1
-         docker build -t myapp:$VERSION_TAG ./sample-application
-         docker tag myapp:$VERSION_TAG ismailsabryibm/myapp:$VERSION_TAG
+          docker build -t myapp:latest ./sample-application
+          docker tag myapp:latest ismailsabryibm/myapp:latest
          
       - name: Push Docker Image
         run: docker push ismailsabryibm/myapp:latest 
