--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -57,3 +57,4 @@ jobs:
           kubectl scale deployment myapp --replicas=3
           sleep 60 #
           kubectl get pods 
+          minikube service myapp
