--- a/sample-application/myappdeploy.yaml
+++ b/sample-application/myappdeploy.yaml
@@ -23,7 +23,9 @@ spec:
           requests:
             memory: "256Mi"
             cpu: "200m"
+            storage: "1Gi"
           limits:
             memory: "512Mi"
             cpu: "300m"
+            storage: "2Gi"
       automountServiceAccountToken: false
