--- a/sample-application/myappdeploy.yaml
+++ b/sample-application/myappdeploy.yaml
@@ -24,4 +24,8 @@ spec:
             memory: "256Mi"
             cpu: "200m"
             ephemeral-storage: "1Gi"
+        limits:
+            memory: "512Mi"
+            cpu: "300m"
+            ephemeral-storage: "2Gi"
       automountServiceAccountToken: false
