--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -34,7 +34,8 @@ jobs:
           curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
-
+      - name: Setting up Docker 
+        uses: docker/setup-buildx-action@v3
       - name: Start Minikube
         run: |
           minikube start --driver=docker
@@ -44,23 +45,18 @@ jobs:
           node-version: 18
       - name: Downloading Package
         run: npm init -y
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name : Logging into docker hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Build Docker Image
+          password: ${{ secrets.DOCKER_PASSWORD }}    
+      - name: Building Docker Image
         run: |
           docker build -t myapp:latest ./sample-application
           docker tag myapp:latest ismailsabryibm/myapp:1.0
-      - name: Push Docker Image
+      - name: Pushing Docker Image
         run: docker push ismailsabryibm/myapp:1.0 
-      - name: Apply Kubernetes Manifests
+      - name: Orchestration using Kuberentes 
         working-directory: sample-application
         run: |
           kubectl apply -f myappdeploy.yaml --validate=false
