--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -34,7 +34,7 @@ jobs:
           curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
-      - name: Setting up Docker 
+      - name: Setting up Podman 
         uses: docker/setup-buildx-action@v3
       - name: Start Minikube
         run: |
@@ -50,11 +50,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}    
-      - name: Building Docker Image
+      - name: Building Container Image
         run: |
           docker build -t myapp:latest ./sample-application
           docker tag myapp:latest ismailsabryibm/myapp:1.0
-      - name: Pushing Docker Image
+      - name: Pushing Container Image
         run: docker push ismailsabryibm/myapp:1.0 
       - name: Orchestration using Kuberentes 
         working-directory: sample-application
