--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -16,24 +16,14 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  build-deploy:
+  
+  Build-Phase:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install Minikube
-        run: |
-          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          chmod +x minikube
-          sudo mv minikube /usr/local/bin/
-
-      - name: Install kubectl
-        run: |
-          curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
       - name: Setting up Podman 
         uses: docker/setup-buildx-action@v3
       - name: Start Minikube
@@ -45,7 +35,7 @@ jobs:
           node-version: 18
       - name: Downloading Package
         run: npm init -y
-      - name : Logging into docker hub
+      - name: Logging into docker hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -56,11 +46,103 @@ jobs:
           docker tag myapp:latest ismailsabryibm/myapp:1.0
       - name: Pushing Container Image
         run: docker push ismailsabryibm/myapp:1.0 
-      - name: Orchestration using Kuberentes 
+  
+  Deploy-Phase:
+    runs-on: ubuntu-latest 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Install Minikube
+        run: |
+          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          chmod +x minikube
+          sudo mv minikube /usr/local/bin/
+      - name: Install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+      - name: Orchestration using Kubernetes
         working-directory: sample-application
         run: |
           kubectl apply -f myappdeploy.yaml --validate=false
           kubectl apply -f myappservice.yaml --validate=false
           kubectl scale deployment myapp --replicas=3
-          sleep 60 #
-          kubectl get pods 
+          sleep 60
+          kubectl get pods
+name: Build & Deploy myapp
+on: 
+  push:
+    branches:
+      - main
+
+jobs:
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  
+  Build-Phase:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setting up Podman 
+        uses: docker/setup-buildx-action@v3
+      - name: Start Minikube
+        run: |
+          minikube start --driver=docker
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Downloading Package
+        run: npm init -y
+      - name: Logging into docker hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}    
+      - name: Building Container Image
+        run: |
+          docker build -t myapp:latest ./sample-application
+          docker tag myapp:latest ismailsabryibm/myapp:1.0
+      - name: Pushing Container Image
+        run: docker push ismailsabryibm/myapp:1.0 
+  
+  Deploy-Phase:
+    runs-on: ubuntu-latest 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Install Minikube
+        run: |
+          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          chmod +x minikube
+          sudo mv minikube /usr/local/bin/
+      - name: Install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+      - name: Orchestration using Kubernetes
+        working-directory: sample-application
+        run: |
+          kubectl apply -f myappdeploy.yaml --validate=false
+          kubectl apply -f myappservice.yaml --validate=false
+          kubectl scale deployment myapp --replicas=3
+          sleep 60
+          kubectl get pods
