--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -26,9 +26,7 @@ jobs:
           fetch-depth: 0
       - name: Setting up Podman 
         uses: docker/setup-buildx-action@v3
-      - name: Start Minikube
-        run: |
-          minikube start --driver=docker
+        
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -49,6 +47,7 @@ jobs:
   
   Deploy-Phase:
     runs-on: ubuntu-latest 
+    needs: Build-Phase
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -64,6 +63,9 @@ jobs:
           curl -LO "https://dl.k8s.io/release/v1.26.3/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
+      - name: Start Minikube
+        run: |
+          minikube start --driver=docker
       - name: Orchestration using Kubernetes
         working-directory: sample-application
         run: |
