--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -19,6 +19,7 @@ jobs:
   
   Build-Phase:
     runs-on: ubuntu-latest
+    needs: sonarcloud
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
