--- a/.github/workflows/bnd1.yml
+++ b/.github/workflows/bnd1.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: sonarcloud
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
