--- a/sample-application/myappdeploy.yaml
+++ b/sample-application/myappdeploy.yaml
@@ -18,7 +18,7 @@ spec:
       - name: myapp
         image: ismailsabryibm/myapp:1.0
         ports:
-        # - containerPort: 3000
+        - containerPort: 3000
         # resources:
         #   requests:
         #     memory: "256Mi"
